--- a/src/main/resources/static/article.html
+++ b/src/main/resources/static/article.html
@@ -42,6 +42,9 @@
 			<a class="item" href="https://github.com/jxzhangaoran">
 				关于作者<i class="fas fa-at icon"></i>
 			</a>
+			<a class="item mobilelogined loginhidden" href="invite.html">
+				邀请回答<span class="inviteNumber">0</span><i class="envelope outline icon"></i>
+			</a>
 			<a class="item mobilelogined loginhidden" href="me.html">
 				我的<i class="user icon"></i>
 			</a>
